# PDF-Derivation

./: LICENSE  README.md
docs/: index.md
docs/BMIBAI_form_css/: index.html  pdfix_forms.js  script.js  w3.css
docs/af_css_table/: AFStyle.css  index.html
docs/table_with_attributes/: index.html
pdf/: README.md
pdf/html/BMIBAI_form_css/: pdfix_acroform.js
pdf/html/af_css_js_sort_table/: afstyle.css  index.html  style.css
pdf/html/table_with_attributes/: style.css
sources/cmdline/: CMakeLists.txt
sources/cmdline/include/: derived_output_writer.h  tagged_pdf_attr_dict.h  tagged_pdf_attributes.h  tagged_pdf_caption.h  tagged_pdf_classmap.h  tagged_pdf_element.h  tagged_pdf_element_factory.h  tagged_pdf_figure.h  tagged_pdf_form.h  tagged_pdf_heading.h  tagged_pdf_html_doc.h  tagged_pdf_html_ns.h  tagged_pdf_label.h  tagged_pdf_lbody.h  tagged_pdf_link.h  tagged_pdf_list.h  tagged_pdf_listitem.h  tagged_pdf_scripts.h  tagged_pdf_utils.h  tagged_utils.h
sources/cmdline/platform/msvc2017/: PDFDerivation.sln  PDFDerivation.vcxproj  PDFDerivation.vcxproj.filters
sources/cmdline/src/: Main.cpp  derived_output_writer.cpp  tagged_pdf_attr_dict.cpp  tagged_pdf_attributes.cpp  tagged_pdf_caption.cpp  tagged_pdf_classmap.cpp  tagged_pdf_element.cpp  tagged_pdf_element_factory.cpp  tagged_pdf_figure.cpp  tagged_pdf_form.cpp  tagged_pdf_heading.cpp  tagged_pdf_html_doc.cpp  tagged_pdf_html_ns.cpp  tagged_pdf_label.cpp  tagged_pdf_lbody.cpp  tagged_pdf_link.cpp  tagged_pdf_list.cpp  tagged_pdf_listitem.cpp  tagged_pdf_utils.cpp  tagged_utils.cpp
sources/include/: Pdfix.h
